--- a/industries.html
+++ b/industries.html
@@ -6,7 +6,8 @@
     <title>Industries We Serve - InfraGuard Technologies</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/industries.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="js/main.js" defer></script>
     <script src="js/industries.js" defer></script>
 </head>
@@ -15,45 +16,51 @@
         <div class="container header-container">
             <div class="logo">
                 <a href="index.html">
-                    <h1>InfraGuard</h1>
+                    <img src="images/logo4.png" alt="InfraGuard Technologies Logo">
                 </a>
             </div>
             <nav>
-                <ul class="main-nav">
+                <ul class="main-menu">
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT US</a></li>
                     <li class="dropdown">
-                        <a href="services.html" class="dropdown-toggle">Services <i class="fas fa-chevron-down"></i></a>
-                        <div class="dropdown-menu">
-                            <div class="dropdown-column">
+                        <a href="services.html">SERVICES</a>
+                        <div class="dropdown-content">
+                            <div class="security-column">
                                 <h3>Physical Security Solutions</h3>
-                                <a href="services.html#infrastructure-guarding">Infrastructure Guarding</a>
-                                <a href="services.html#construction-site">Construction Site Security</a>
-                                <a href="services.html#onsite-security">24/7 On-Site Security</a>
-                                <a href="services.html#access-control">Access Control</a>
-                                <a href="services.html#risk-assessment">Security Risk Assessment</a>
+                                <ul>
+                                    <li><a href="services.html#infrastructure">Infrastructure Guarding</a></li>
+                                    <li><a href="services.html#construction">Construction Site Security</a></li>
+                                    <li><a href="services.html#onsite">24/7 On-Site Security</a></li>
+                                    <li><a href="services.html#access">Access Control</a></li>
+                                    <li><a href="services.html#risk">Security Risk Assessment</a></li>
+                                </ul>
                             </div>
-                            <div class="dropdown-column">
+                            <div class="security-column">
                                 <h3>Cybersecurity Solutions</h3>
-                                <a href="services.html#network-security">Network Security</a>
-                                <a href="services.html#firewall">Firewall & Intrusion Prevention</a>
-                                <a href="services.html#endpoint">Endpoint Protection</a>
-                                <a href="services.html#email-security">Email Security</a>
-                                <a href="services.html#vulnerability">Vulnerability Assessment</a>
-                                <a href="services.html#consulting">Cybersecurity Consulting</a>
+                                <ul>
+                                    <li><a href="services.html#network">Network Security</a></li>
+                                    <li><a href="services.html#firewall">Firewall & Intrusion Prevention</a></li>
+                                    <li><a href="services.html#endpoint">Endpoint Protection</a></li>
+                                    <li><a href="services.html#email">Email Security</a></li>
+                                    <li><a href="services.html#vulnerability">Vulnerability Assessment</a></li>
+                                    <li><a href="services.html#consulting">Cybersecurity Consulting</a></li>
+                                </ul>
                             </div>
                         </div>
                     </li>
-                    <li><a href="industries.html">Industries</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="industries.html" class="active">INDUSTRIES</a></li>
+                    <li><a href="careers.html">CAREERS</a></li>
+                    <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
-                <div class="mobile-menu-toggle">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
             </nav>
-            <div class="cta-button">
-                <a href="contact.html" class="btn">Request a Quote</a>
+            <div class="header-cta">
+                <a href="contact.html" class="btn">REQUEST A QUOTE</a>
+            </div>
+            <div class="mobile-menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
         </div>
     </header>
@@ -185,40 +192,48 @@
 
     <footer>
         <div class="container">
-            <div class="footer-grid">
-                <div class="footer-column">
-                    <h3>InfraGuard Technologies</h3>
-                    <p>From physical guards to digital defenses — we secure your assets, infrastructure, and data.</p>
+            <div class="footer-top">
+                <div class="footer-logo">
+                    <img src="images/logo4.png" alt="InfraGuard Technologies Logo">
+                    <p>InfraGuard Technologies is Australia's leading provider of integrated physical and cybersecurity solutions, with over 15 years of experience protecting businesses and infrastructure.</p>
                 </div>
-                <div class="footer-column">
-                    <h3>Services</h3>
+                <div class="footer-menu">
+                    <h3>About Us</h3>
                     <ul>
-                        <li><a href="services.html#physical">Physical Security</a></li>
-                        <li><a href="services.html#cyber">Cybersecurity</a></li>
-                        <li><a href="services.html#risk-assessment">Risk Assessment</a></li>
-                        <li><a href="services.html#consulting">Consulting</a></li>
+                        <li><a href="about.html">Contact Us</a></li>
+                        <li><a href="#">Our Partners</a></li>
+                        <li><a href="#">Careers</a></li>
                     </ul>
                 </div>
-                <div class="footer-column">
-                    <h3>Quick Links</h3>
+                <div class="footer-menu">
+                    <h3>Delivering Value</h3>
                     <ul>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="industries.html">Industries</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="privacy.html">Privacy Policy</a></li>
+                        <li><a href="#">Partner Profitability</a></li>
+                        <li><a href="#">Training & Enablement</a></li>
+                        <li><a href="#">Physical Security</a></li>
+                        <li><a href="#">Cybersecurity</a></li>
                     </ul>
                 </div>
-                <div class="footer-column">
-                    <h3>Contact Us</h3>
-                    <ul class="contact-info">
-                        <li><i class="fas fa-envelope"></i> info@infraguard.com</li>
-                        <li><i class="fas fa-phone"></i> +61 XXX XXX XXXX</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Unit 123, Business Center, Your City, Australia</li>
+                <div class="footer-menu">
+                    <h3>Contact</h3>
+                    <ul>
+                        <li><a href="tel:1800123456">Phone: 1800 123 456</a></li>
+                        <li><a href="mailto:info@infraguard.com.au">Email: info@infraguard.com.au</a></li>
+                        <li><a href="contact.html">Contact Form</a></li>
+                    </ul>
+                </div>
+                <div class="footer-menu">
+                    <h3>Connect With Us</h3>
+                    <ul class="social-links">
+                        <li><a href="#" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+                        <li><a href="#" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
+                        <li><a href="#" target="_blank"><i class="fab fa-facebook"></i> Facebook</a></li>
+                        <li><a href="#" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 InfraGuard Technologies. All rights reserved.</p>
+                <p>Copyright © 2025 InfraGuard Technologies. All rights reserved.</p>
             </div>
         </div>
     </footer>
