Update website with news images and partner logos, improve styling for partner section

--- a/index.html
+++ b/index.html
@@ -113,17 +113,23 @@
             <h2 class="section-title">Benefit from Partnering with the Best</h2>
             <div class="feature-grid">
                 <div class="feature-box">
-                    <div class="needs-image"></div>
+                    <div class="feature-icon">
+                        <i class="fas fa-shield-alt"></i>
+                    </div>
                     <h3>Access to the world's leading security technologies</h3>
                     <p>Get access to world-class security systems including physical security, cybersecurity, and integrated solutions from leading brands.</p>
                 </div>
                 <div class="feature-box">
-                    <div class="needs-image"></div>
+                    <div class="feature-icon">
+                        <i class="fas fa-clock"></i>
+                    </div>
                     <h3>Leverage over 15 years' experience in the Australian security industry</h3>
                     <p>Thanks to our highly competitive strategies, InfraGuard's partners continue to win more deals through the positioning of unique solutions.</p>
                 </div>
                 <div class="feature-box">
-                    <div class="needs-image"></div>
+                    <div class="feature-icon">
+                        <i class="fas fa-handshake"></i>
+                    </div>
                     <h3>We are here for you</h3>
                     <p>InfraGuard is customer-centric and focused on establishing and developing strong long-term relationships with its partner base.</p>
                 </div>
@@ -223,43 +229,49 @@
             <div class="partners-container">
                 <div class="partners-track">
                     <div class="partner">
-                        <div class="needs-image"></div>
+                        <img src="images/partner logos/Verizon_Communications-Logo.wine.png" alt="Verizon Communications">
                     </div>
                     <div class="partner">
-                        <div class="needs-image"></div>
+                        <img src="images/partner logos/SAP_SE-Logo.wine.png" alt="SAP SE">
                     </div>
                     <div class="partner">
-                        <div class="needs-image"></div>
+                        <img src="images/partner logos/Robert_Bosch_GmbH-Logo.wine.png" alt="Robert Bosch GmbH">
                     </div>
                     <div class="partner">
-                        <div class="needs-image"></div>
+                        <img src="images/partner logos/Qantas-Logo.wine.png" alt="Qantas">
                     </div>
                     <div class="partner">
-                        <div class="needs-image"></div>
+                        <img src="images/partner logos/Nordex-Logo.wine.png" alt="Nordex">
                     </div>
                     <div class="partner">
-                        <div class="needs-image"></div>
+                        <img src="images/partner logos/Nokia-Logo.wine.png" alt="Nokia">
+                    </div>
+                    <div class="partner">
+                        <img src="images/partner logos/CID-Group-white-logo.png" alt="CID Group">
                     </div>
                 </div>
                 <!-- Duplicate track for seamless scrolling -->
                 <div class="partners-track">
                     <div class="partner">
-                        <div class="needs-image"></div>
+                        <img src="images/partner logos/Verizon_Communications-Logo.wine.png" alt="Verizon Communications">
                     </div>
                     <div class="partner">
-                        <div class="needs-image"></div>
+                        <img src="images/partner logos/SAP_SE-Logo.wine.png" alt="SAP SE">
                     </div>
                     <div class="partner">
-                        <div class="needs-image"></div>
+                        <img src="images/partner logos/Robert_Bosch_GmbH-Logo.wine.png" alt="Robert Bosch GmbH">
                     </div>
                     <div class="partner">
-                        <div class="needs-image"></div>
+                        <img src="images/partner logos/Qantas-Logo.wine.png" alt="Qantas">
                     </div>
                     <div class="partner">
-                        <div class="needs-image"></div>
+                        <img src="images/partner logos/Nordex-Logo.wine.png" alt="Nordex">
                     </div>
                     <div class="partner">
-                        <div class="needs-image"></div>
+                        <img src="images/partner logos/Nokia-Logo.wine.png" alt="Nokia">
+                    </div>
+                    <div class="partner">
+                        <img src="images/partner logos/CID-Group-white-logo.png" alt="CID Group">
                     </div>
                 </div>
             </div>
@@ -301,22 +313,30 @@
             <p>Keep ahead of the latest trends, discover innovative solutions with our thought-leadership pieces and stay connected to the latest developments from InfraGuard.</p>
             <div class="news-grid">
                 <div class="news-item">
-                    <div class="news-image needs-image"></div>
+                    <div class="news-image">
+                        <img src="images/Cyber Threat Landscape article image.jpg" alt="The Evolving Cyber Threat Landscape">
+                    </div>
                     <h3>The Evolving Cyber Threat Landscape: How to Stay Ahead</h3>
                     <a href="#" class="read-more">READ MORE</a>
                 </div>
                 <div class="news-item">
-                    <div class="news-image needs-image"></div>
+                    <div class="news-image">
+                        <img src="images/Physical Security Innovations image.jpg" alt="Physical Security Innovations">
+                    </div>
                     <h3>Physical Security Innovations for Construction Sites</h3>
                     <a href="#" class="read-more">READ MORE</a>
                 </div>
                 <div class="news-item">
-                    <div class="news-image needs-image"></div>
+                    <div class="news-image">
+                        <img src="images/Access Control Systems image.jpg" alt="Access Control Systems">
+                    </div>
                     <h3>How to Implement Effective Access Control Systems</h3>
                     <a href="#" class="read-more">READ MORE</a>
                 </div>
                 <div class="news-item">
-                    <div class="news-image needs-image"></div>
+                    <div class="news-image">
+                        <img src="images/Security Spaces 2025 image.jpg" alt="Security Spaces 2025">
+                    </div>
                     <h3>Transforming Security Spaces in 2025</h3>
                     <a href="#" class="read-more">READ MORE</a>
                 </div>
